# QuizService

./: .gitignore  Enterprise_Solution_Quizzes.sln  RunContainers.bat
Enterprise_Solution_Quizzes/QuizSharedDocker/: CMakeLists.txt  crow_all.h  main.cpp
Enterprise_Solution_Quizzes/QuizSharedDocker/objects/: Answer.cpp  Answer.h  Database.cpp  Database.h  JsonDTO.cpp  JsonDTO.h  Logger.cpp  Logger.h  Question.cpp  Question.h  QuestionPool.cpp  QuestionPool.h  Quiz.cpp  Quiz.h
Enterprise_Solution_Quizzes/QuizSharedDocker/public/: createPool.html  createQuiz.html  deletePool.html  deleteQuiz.html  editPool.html  editQuiz.html  getMode.html  index.html  navbar.html  otherModules.html  questionPool.html  quizLandingPage.html  quizViewer.html  savepoolFail.html  savepoolPass.html  selectPool.html  selectQuiz.html  serviceips.json  studentIndex.html  takeQuiz.html  viewQuiz.html  viewQuizList.html
Enterprise_Solution_Quizzes/QuizSharedDocker/public/HTML/: CreatePool.html  QuestionPool.html
Enterprise_Solution_Quizzes/QuizSharedDocker/public/Java/: questionPoolForm.js
Enterprise_Solution_Quizzes/QuizSharedDocker/public/QuestionPool/: QuestionNumber.data
Enterprise_Solution_Quizzes/QuizSharedDocker/public/json/: createQuizInCalendar.json  currentQuestions.json  currentQuiz.json  pools.json  quizzes.json  serviceips.json  tmpPoolData.json
Enterprise_Solution_Quizzes/QuizSharedDocker/public/quizzes/: quizList.txt
Enterprise_Solution_Quizzes/QuizSharedDocker/public/scripts/: communication.js  deleteQuiz.js  editpool.js  getMode.js  indexes.js  loadMenuOption.js  (+12 more)
(+81 files in other folders)
